# docs/swagger.json
@@ -111,6 +111,15 @@
                         }
                     },
                     {
+                        "description": "CoverImageUrl",
+                        "name": "cover_image_url",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
                         "description": "State",
                         "name": "state",
                         "in": "body",
